--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en">
-<head>
-    <title>Number Odd/Even</title>
-</head>
-<body>
-    <h1>Number: {{ number }} is {{ odd_even }}</h1>
-</body>
-</html>
-=======
 <HTML lang="en">
   <HEAD>
     <TITLE>HBNB</TITLE>
   </HEAD>
   <BODY>
-    <H1>Number: {{n}} is {% if n % 2 == 0 %}even{% else %}odd{%endif %}</H1>
+    <H1>Number: {{number}} is {% if number % 2 == 0 %}even{% else %}odd{%endif %}</H1>
   </BODY>
 </HTML>
->>>>>>> f8fc929b8545ce466a6173b756146a580a15b191
